[workspace]
members = [
    "src/rust/ferrigno-macros",
    "src/rust/ferrigno-library",
    "src/rust/ferrigno-interpreter",
    "src/rust/ferrigno-compiler",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["t-0"]
license = "MIT"
repository = "https://github.com/t-0/ferrigno"
readme = "README.md"
