[package]
name = "ferrigno-compiler"
description = "Ferrigno Lua 5.5 compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrigno-library = { path = "../ferrigno-library", version = "0.1.0" }

[[bin]]
name = "ferrignoc"
path = "src/main.rs"
