[package]
name = "ferrigno-interpreter"
description = "Ferrigno Lua 5.5 interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrigno-library = { path = "../ferrigno-library", version = "0.1.0" }

[[bin]]
name = "ferrigno"
path = "src/main.rs"
