[package]
name = "ferrigno-library"
description = "Core library for the Ferrigno Lua 5.5 runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferrigno-macros = { path = "../ferrigno-macros", version = "0.1.0" }
