[package]
name = "ferrigno-library"
description = "Core library for the Ferrigno Lua 5.5 runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"


[[bin]]
name = "ferrigno"
path = "src/bin/ferrigno-interpreter.rs"

[[bin]]
name = "ferrignoc"
path = "src/bin/ferrigno-compiler.rs"
